syntax = "proto3";
package modules.claim;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "modules/claim/params.proto";
import "modules/claim/claim_record.proto";
import "modules/claim/mission.proto";
import "modules/claim/initial_claim.proto";

option go_package = "github.com/ignite/modules/x/claim/types";

// GenesisState defines the claim module's genesis state.
message GenesisState {
  cosmos.base.v1beta1.Coin airdropSupply = 1 [ (gogoproto.nullable) = false ];
  repeated ClaimRecord claimRecords = 2 [ (gogoproto.nullable) = false ];
  repeated Mission missions = 3 [ (gogoproto.nullable) = false ];
  InitialClaim initialClaim = 4 [ (gogoproto.nullable) = false ];
  Params params = 5 [ (gogoproto.nullable) = false ];
}
